--- a/ansible/playbooks/router/templates/Corefile.j2
+++ b/ansible/playbooks/router/templates/Corefile.j2
@@ -1,5 +1,7 @@
 .:53 {
-  bind 192.168.1.1 127.0.0.1 ::1
+  bind 0.0.0.0 127.0.0.1 { # add ::1 for IPv6
+    except igb0
+  }
   errors
   log
   prometheus :9153
@@ -9,9 +11,6 @@
     fallthrough
   }
   hosts {
-    192.168.42.60 gateway.{{ domain }}
-    192.168.42.60 s3.{{ domain }}
-    192.168.42.60 unifi.{{ domain }}
     fallthrough
   }
   forward . tls://1.1.1.1 tls://1.0.0.1 {
