fix: small tweaks

--- a/ansible/playbooks/router/templates/Corefile.j2
+++ b/ansible/playbooks/router/templates/Corefile.j2
@@ -1,7 +1,5 @@
 .:53 {
-  bind 0.0.0.0 127.0.0.1 ::1 {
-    except igb0
-  }
+  bind 10.1.1.1 10.1.2.1 10.1.3.1 10.1.5.1 10.1.6.1 10.255.255.225 10.255.255.1
   errors
   log
   prometheus :9153
