chore: more cleanup

--- a/docs/_snippets/links.jinja2
+++ b/docs/_snippets/links.jinja2
@@ -1,7 +1,7 @@
 {%- set urls =
   {
     'repo': {
-      'url': 'https://github.com/onedr0p/home-ops'
+      'url': 'https://github.com/claughinghouse/home-ops'
     },
     'external': {
       'ansible': {
